--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet"
           href="style.css">
 
+    <script src="libs/howler.js"></script>
+
     <script type="text/javascript"
             src="//localhost:35729/livereload.js"></script>
 
