--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,9 @@
 </head>
 
 <body>
-    <canvas id='cvs'
-            width="640"
-            height="480"></canvas>
-
-    <div id="slider"></div>
+    <div id='sketch-container'>
+        <canvas id='cvs' width="640" height="480"></canvas>
+    </div>
 </body>
 
 </html>
