--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,21 @@
 <html>
 
 <head>
-    <title>X</title>
+    <title>KANA</title>
 
-    <link rel="stylesheet"
-          href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 
     <script src="libs/howler.js"></script>
-
-    <script type="text/javascript"
-            src="//localhost:35729/livereload.js"></script>
-
-    <script type="module"
-            src="js/index.js"></script>
-
-    <script language="javascript"
-            src="libs/TweenMax.min.js"></script>
+    <script type="text/javascript" src="//localhost:35729/livereload.js"></script>
+    <script type="module" src="js/index.js"></script>
+    <script language="javascript" src="libs/TweenMax.min.js"></script>
+    <script src="libs/p5.min.js"></script>
 
     <!-- <link rel="stylesheet" -->
           <!-- href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
     <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
-
     <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
-
     <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
-
 </head>
 
 <body>
