mostly finished converting to p5

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script src="libs/howler.js"></script>
     <script type="text/javascript" src="//localhost:35729/livereload.js"></script>
     <script type="module" src="js/index.js"></script>
-    <script language="javascript" src="libs/TweenMax.min.js"></script>
+    <!-- <script language="javascript" src="libs/TweenMax.min.js"></script> -->
     <script src="libs/p5.min.js"></script>
 
     <!-- <link rel="stylesheet" -->
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <div id='sketch-container'>
-        <canvas id='cvs' width="640" height="480"></canvas>
-    </div>
+    <!-- <div id='sketch-container'> -->
+        <!-- <canvas id='cvs' width="640" height="480"></canvas> -->
+    <!-- </div> -->
 </body>
 
 </html>
