added link to index.html file

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>KANA</title>
 
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 
     <script src="libs/howler.js"></script>
     <script type="text/javascript" src="//localhost:35729/livereload.js"></script>
@@ -19,9 +19,15 @@
 </head>
 
 <body>
-    <!-- <div id='sketch-container'> -->
-        <!-- <canvas id='cvs' width="640" height="480"></canvas> -->
-    <!-- </div> -->
+
+    <div id='sketch-container'> 
+        <div id="p5_loading">ローディング...</div>
+
+        <div class='text'>
+            [<a target="_blank" class="kblink" href="https://en.wikipedia.org/wiki/Language_input_keys">kb layout help</a>]
+        </div>
+    </div>
+    
 </body>
 
 </html>
