--- a/tools/font_to_img.html
+++ b/tools/font_to_img.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <style>
+        canvas{border:1px solid blue;}
+    </style>
     <div id='sketch-container'>
     </div>
 </body>
