--- a/tools/atlas_maker/index.html
+++ b/tools/atlas_maker/index.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-  <title>Atlas Maker</title>
+  <title>Atlas_Maker</title>
   <script type="text/javascript" src="//localhost:35729/livereload.js"></script>
   <script type="module" src="src.js"></script>
-  <script src="../libs/p5.min.js"></script>
+  <script src="../../../libs/p5.min.js"></script>
 </head>
 
 <body>
@@ -15,6 +15,7 @@
   </style>
   <div id='sketch-container'>
   </div>
+
 </body>
 
 </html>
