--- a/tools/atlas_maker.html
+++ b/tools/atlas_maker.html
@@ -3,7 +3,7 @@
 <head>
   <title>Atlas_Maker</title>
   <script type="text/javascript" src="//localhost:35729/livereload.js"></script>
-  <script type="module" src="src.js"></script>
+  <script type="module" src="atlas_maker.js"></script>
   <script src="../../../libs/p5.min.js"></script>
 </head>
 
